# dbt-loom

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-docs-main.yml  publish-docs-release.yml  publish-docs.yml  publish.yml  test.yml
0.7/: index.html
0.7/CODE_OF_CONDUCT/: index.html
0.7/CONTRIBUTING/: index.html
0.7/getting-started/: index.html
0.8/: 404.html
0.8/CONTRIBUTING/: index.html
0.8/advanced-configuration/: index.html
0.8/search/: search_index.json
0.9/: 404.html  index.html
0.9/CODE_OF_CONDUCT/: index.html
0.9/CONTRIBUTING/: index.html
0.9/advanced-configuration/: index.html
0.9/getting-started/: index.html
dbt_loom/: __init__.py  config.py  logging.py  manifests.py  shims.py
dbt_loom/clients/: az_blob.py  dbt_cloud.py  dbx.py  gcs.py  paradime.py  s3.py  snowflake_stage.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  advanced-configuration.md  getting-started.md  index.md
gh_pages/: index.html
gh_pages/CONTRIBUTING/: index.html
gh_pages/getting-started/: index.html
integration_tests/customer_success/: .sqlfluffignore  dbt_loom.config.yml  dbt_project.yml  profiles.yml
integration_tests/customer_success/jaffle-data/: raw_customers.csv
integration_tests/customer_success/reports/: README.md  package-lock.json  package.json
integration_tests/customer_success/reports/pages/customers/: index.md
integration_tests/customer_success/reports/pages/stores/: [city].md
integration_tests/revenue/: .pre-commit-config.yaml  .sqlfluff  README.md  requirements.txt
integration_tests/revenue/jaffle-data/: raw_products.csv
integration_tests/revenue/models/marts/: __models.yml
integration_tests/revenue/models/staging/: __models.yml  stg_locations.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
integration_tests/revenue/reports/pages/: index.md
integration_tests/revenue/reports/pages/analysis/: seasonality-investigation.md
integration_tests/revenue/reports/pages/customers/: [customer].md
latest/: 404.html
main/: 404.html  index.html
main/CODE_OF_CONDUCT/: index.html
main/CONTRIBUTING/: index.html
main/advanced-configuration/: index.html
main/getting-started/: index.html
main/search/: search_index.json
test_projects/customer_success/: .gitignore  .sqlfluff  Taskfile.yml  dbt_loom.config.yml  dbt_project.yml  meltano.yml  package-lock.yml  packages.yml  profiles.yml
test_projects/customer_success/models/marts/: __models.yml  customer_status_histories.py  customers.sql  orders.sql
test_projects/customer_success/models/staging/: __models.yml  __sources.yml  stg_customers.sql
test_projects/customer_success/reports/: .gitignore
test_projects/revenue/: dbt_loom.config.yml  dbt_project.yml  package-lock.yml  profiles.yml
test_projects/revenue/jaffle-data/: raw_stores.csv
test_projects/revenue/macros/: cents_to_dollars.sql
test_projects/revenue/models/: groups.yml
test_projects/revenue/models/marts/: __models.yml  accounts.sql  orders.sql  orders_v2.sql
test_projects/revenue/models/staging/: __models.yml  __sources.yml  stg_accounts.sql  stg_locations.sql  stg_orders.sql  stg_supplies.sql
test_projects/revenue/reports/pages/: index.md
test_projects/revenue/seeds/: __seeds.yml  integers.csv  seed_accounts.csv
tests/: __init__.py  test_dbt_core_execution.py  test_mainfest_node.py  test_manifest_loaders.py
(+5 files in other folders)
